# robocup_scenario_test

./: .gitignore  README.md  compile_proto.sh  grsim_replacement.py  main.py  pyproject.toml  robot.py  setup.cfg  setup.py  sim_referee.py  sim_world.py  vision_world.py  world_observer.py
.docker/: consai-grsim-compose.yml
.github/workflows/: consai-grsim-compose.yml  python-app.yml
pytest_rcst/: plugin.py
rcst/: ball.py  calc.py  communication.py  compile_proto.sh  grsim_replacement.py  logging.py  rcst_plugin.py  referee_sender.py  robot.py  sim_referee.py  sim_sender.py  sim_world.py  vision_receiver.py  vision_world.py  world_observer.py
rcst/observer/: ball_placement_observer.py  customized_observer.py  goal_observer.py  robot_speed.py
srssl/: communication.py  compile_proto.sh  sim_referee.py  sim_world.py  vision_receiver.py  vision_world.py  world_observer.py
tests/: test_ball_placement_observer.py  test_calc.py  test_customized_observer.py  test_goal_observer.py  test_robot_speed_observer.py  test_scenario_ball_placement.py  test_scenario_halt.py  test_scenario_kickoff.py  test_scenario_stop.py  test_world_observer.py
