[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srssl"
version = "0.1.0"
description = "Simple Python library for RoboCup SSL"
authors = [
    { name = "Shota Aoki", email = "macakasit@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
repository = "https://github.com/SSL-Roots/simple_robocup_ssl"
# homepage = "http://example.com"
# documentation = "http://example.com/docs"

[project.dependencies]
protobuf = "^3.12"

[project.optional-dependencies]
dev = [
    "flake8 >= 3.7.9",
    "pytest >= 5.4.1"
]
